--- a/modern-portfolio-theory-and-investment-analysis/week-7-the-correlation0-structure-of-secruity-returns-SIM/question_one_analysis.html
+++ b/modern-portfolio-theory-and-investment-analysis/week-7-the-correlation0-structure-of-secruity-returns-SIM/question_one_analysis.html
@@ -565,7 +565,24 @@ a_c
 \end{bmatrix}.
 \end{aligned}\]</span>
 <p>$$</p>
+<p>Now suppose suppose we have $1500 to invest and we decided to invest
+into each $500. What would be our expected return?</p>
+<p>Using the Single Index Model we would calculate $$ <span class="math display">\[\begin{align*}
+\mathbb{E}[R_p] &amp;= \sum_{i=a,b,c} \frac{1}{3} \mathbb{E}[R_i] \\
+&amp;= \frac{1}{3} \times 2.9359 + \frac{1}{3} \times 6.1949 +
+\frac{1}{3} \times 5.409167 \\
+&amp;= \frac{1}{3} (2.9359 + 6.1949 + 5.409167) \\
+&amp;= 4.84665
+\end{align*}\]</span></p>
+<p>$$ Now, given our investment</p>
+<p><span class="math display">\[
+(\text{investment amount}) * \mathbb{E}[R_p] = 15000 * 4.84665 =
+17269.98
+\]</span></p>
 </div>
+</div>
+<div id="addressing-the-bias-in-the-room-beta" class="section level1">
+<h1>Addressing the Bias in the room <span class="math inline">\(\beta\)</span></h1>
 </div>
 
 
